--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
 
   small-tests:
     runs-on: ubuntu-latest
+    needs: pre-commit
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -30,10 +31,25 @@ jobs:
       - name: run small-tests
         run: poetry run pytest -s -v tests/small
 
+  large-tests:
+    runs-on: ubuntu-latest
+    needs: small-tests
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+      - name: Install jobsim
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          poetry install
+      - name: run large-tests
+        run: poetry run pytest -s -v tests/large
+
   report_workflow:
     if: always()
     runs-on: ubuntu-latest
-    needs: small-tests
+    needs: [pre-commit, small-tests, large-tests]
     steps:
       - uses: uoboda-splunk/workflow-info-splunk-upload-action@v1
         with:
