--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,8 @@ jobs:
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           poetry install
-
       - name: run small-tests
-        run: python -m pytest -v --junitxml=small_tests_results.xml tests/small
+        run: python run pytest -v --junitxml=small_tests_results.xml tests/small
 
   upload-artifacts:
     runs-on: ubuntu-latest
