--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           poetry install
       - name: run small-tests
-        run: python run pytest -v --junitxml=small_tests_results.xml tests/small
+        run: poetry run pytest -v --junitxml=small_tests_results.xml tests/small
 
   upload-artifacts:
     runs-on: ubuntu-latest
