[feat] add matrix strategy for tests and upload jobs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,26 +18,32 @@ jobs:
   small-tests:
     runs-on: ubuntu-latest
     needs: pre-commit
+    strategy:
+      matrix:
+        version: [ "3.9", "3.10", "3.11" ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: ${{ matrix.version }}
       - name: Install jobsim
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           poetry install
       - name: run small-tests
-        run: poetry run pytest -v --junitxml=small_tests_results.xml tests/small
+        run: poetry run pytest -v --junitxml=small_tests_results_${{ matrix.version }}.xml tests/small
 
   upload-artifacts:
     runs-on: ubuntu-latest
     needs: small-tests
+    strategy:
+      matrix:
+        version: [ "3.9", "3.10", "3.11" ]
     steps:
       - uses: actions/upload-artifact@v3
         with:
           name: junit-logs
-          path: /small_tests_results.xml
+          path: /home/runner/work/github-ci/github-ci/small_tests_results_${{ matrix.version }}.xml
 
   large-tests:
     runs-on: ubuntu-latest
