[feat] upload artifacts for large tests in case of creation success, add matrix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           poetry install
-      - name: run small-tests
+      - name: run small-tests-${{ matrix.version }}
         run: poetry run pytest -v --junitxml=small_tests_results_${{ matrix.version }}.xml tests/small
       - uses: actions/upload-artifact@v3
         with:
@@ -40,17 +40,25 @@ jobs:
   large-tests:
     runs-on: ubuntu-latest
     needs: [small-tests]
+    strategy:
+      matrix:
+        version: [ "3.9", "3.10", "3.11" ]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: ${{ matrix.version }}
       - name: Install jobsim
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           poetry install
-      - name: run large-tests
-        run: poetry run pytest -s -v tests/large
+      - name: run large-tests-${{ matrix.version }}
+        run: poetry run pytest -v --junitxml=large_tests_results_${{ matrix.version }}.xml tests/large
+      - uses: actions/upload-artifact@v3
+        if: success()
+        with:
+          name: junit-logs-${{ matrix.version }}
+          path: large_tests_results_${{ matrix.version }}.xml
 
   report_workflow:
     if: always()
