--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
           path: small_tests_results_${{ matrix.version }}.xml
 
   large-tests:
+    if: always()
     runs-on: ubuntu-latest
     needs: [small-tests]
     strategy:
@@ -53,13 +54,34 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
           poetry install
       - name: run large-tests-${{ matrix.version }}
-        if: always()
         run: poetry run pytest -v --junitxml=large_tests_results_${{ matrix.version }}.xml tests/large
       - uses: actions/upload-artifact@v3
         if: success()
         with:
           name: junit-logs-${{ matrix.version }}
           path: large_tests_results_${{ matrix.version }}.xml
+
+  release:
+    name: Release new version
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: false
+          persist-credentials: false
+      - name: Semantic release
+        id: semantic
+        uses: splunk/semantic-release-action@v1.3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_ADMIN }}
+        with:
+          git_committer_name: ${{ secrets.SA_GH_USER_NAME }}
+          git_committer_email: ${{ secrets.SA_GH_USER_EMAIL }}
+          gpg_private_key: ${{ secrets.SA_GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.SA_GPG_PASSPHRASE }}
+          extra_plugins: |
+            @google/semantic-release-replace-plugin
 
   report_workflow:
     if: always()
