--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,10 +38,10 @@ jobs:
           path: small_tests_results_${{ matrix.version }}.xml
 
   large-tests:
-    if: always()
     runs-on: ubuntu-latest
     needs: [small-tests]
     strategy:
+      fail-fast: false
       matrix:
         version: [ "3.9", "3.10", "3.11" ]
     steps:
