--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,7 @@ jobs:
   release:
     name: Release new version
     runs-on: ubuntu-latest
+    needs: [small-tests, large-tests]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -89,7 +90,7 @@ jobs:
   report_workflow:
     if: always()
     runs-on: ubuntu-latest
-    needs: [pre-commit, small-tests, large-tests]
+    needs: [pre-commit, small-tests, large-tests, release]
     steps:
       - uses: uoboda-splunk/workflow-info-splunk-upload-action@v1
         with:
