--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,7 @@ jobs:
           path: large_tests_results_${{ matrix.version }}.xml
 
   release:
+    if: always()
     name: Release new version
     runs-on: ubuntu-latest
     needs: [small-tests, large-tests]
